--- a/任务看板/task_kanban/css/main.css
+++ b/任务看板/task_kanban/css/main.css
@@ -105,10 +105,10 @@ body {
 }
 
 #taskKanbanApp .bottom-box .bottom-part-content {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: flex-end;
+  align-items: flex-end; */
   flex: 1;
   /* height: 80%; */
   /* flex-flow: 0; */
