--- a/wbs计划编制/wbs_planning/css/main.css
+++ b/wbs计划编制/wbs_planning/css/main.css
@@ -17,7 +17,12 @@
 .el-table__body th {
 	padding: 1px;
 } */
-
+html,body{
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 #wbsPlanningApp {
   width: 100%;
   height: 100%;
@@ -155,4 +160,24 @@
 
 #wbsPlanningApp .el-input__suffix i{
   color: #fff;
+}
+/* 
+  @author：zhang fq
+  @date：2020-03-17
+  @description：行内容自适应分割样式
+*/
+#wbsPlanningApp .checek-man-cost{
+  width: 140%;
+  height: 30px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  /* border-bottom: 1px solid #ebeef5; */
+  margin: 0 -10px;
+  text-indent: 10px;
+  border-top: none;
+  border-bottom: 1px solid #ebeef5;
+}
+#wbsPlanningApp .checek-man-cost:nth-last-of-type(1) {
+  border: none;
 }
