--- a/执行管理-进度管理-进度分析及控制/进度分析控制表/progress_contrast_analysis_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度分析控制表/progress_contrast_analysis_1.0/css/main.css
@@ -59,6 +59,65 @@ html,body{
   background-color: #fff;
 }
 
+.table-content{
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-grow: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.table-box{
+  border: 1px solid #eee;
+  flex: 1;
+  background-color: #fff;
+  justify-content: stretch;
+  padding:10px;
+  /* height: 100%; */
+}
+
+.table-left{
+  margin-right: 10px;
+}
+
+.table-right{
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-grow: 1;
+}
+
+.detail-info-box{
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-grow: 1;
+  margin-bottom: 20px;
+}
+
+.title-info-box{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.drop-btn{
+  font-size: 24px;
+  color: #5582f4;
+}
+
+.title-text{
+  font-size: 18px;
+  color:  #5582f4;
+}
+.search-icon{
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 20px;
+}
 #progressCAApp .el-table__body tr.current-row > td {
   background-color: #eff3fd   !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
