--- a/成本管理/成本总览/cost_overview_v1.0/css/main.css
+++ b/成本管理/成本总览/cost_overview_v1.0/css/main.css
@@ -7,9 +7,13 @@ html,body{
 }
 
 #costOverviewApp {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: stretch;
 	width: 100%;
 	height: 100%;
-	background: #f3f3f3;
+	/* background: #f3f3f3; */
 }
 
 .btn-lsit {
@@ -36,11 +40,20 @@ html,body{
 }
 
 #costOverviewApp .chart-box{
-	width: 100%;
+	/* width: 100%; */
 	display: flex;
-	height: 100%;
+	/* height: 100%; */
+	flex-direction: column;
+	flex: 1;
 	justify-content: center;
 	align-items: center;
+	margin-top: 20px;
+	box-sizing: border-box;
+}
+
+.chart-title{
+	font-size: 32px;
+	/* font-weight: 700; */
 }
 
 #costOverviewCharts {
@@ -48,6 +61,48 @@ html,body{
 	height: 100%;
 }
 
+
+.amount-info-box{
+	width: 100%;
+	padding: 20px 0;
+	display: flex;
+	justify-content: space-around;
+	align-items: stretch;
+	box-sizing: border-box;
+}
+
+.info-card{
+	width: 420px;
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-start;
+	align-items: stretch;
+	border: 1px solid #eee;
+	border-radius: 5px;
+	background-color: #999;
+	color: #fff;
+	padding: 20px ;
+}
+
+.card-item{
+	display: flex;
+	/* width: 100%; */
+	height: 30px;
+	font-size: 16px;
+	color: #fff;
+	justify-content: space-between;
+	align-items: center;
+	/* padding: 20px; */
+}
+
+.item-money{
+	height: 70px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 24px;
+	font-weight: 700;
+}
 
 .el-table--border th,
 .el-table__fixed-right-patch {
