--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
@@ -46,6 +46,84 @@ html,body{
 #progressCAApp .btn-lsit button:hover {
   background: #779bf5;
 }
+
+.message-box{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, .4);
+}
+
+.message-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 800px;
+  height: 600px;
+  background: #fff;
+}
+
+.message-title{
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 20px;
+  align-items: center;
+  height: 50px;
+  font-size: 18px;
+  color: #333;
+  border-bottom: 1px solid #eee;
+}
+
+.message-info{
+  overflow-y: auto;
+  padding: 30px 50px;
+  height: 500px;
+}
+
+.message-item{
+  height: 40px;
+  /* padding-left: 30px; */
+  font-size: 18px;
+  color: #333;
+}
+
+.message-info-empty{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #333;
+}
+
+.message-btn-list{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border-top: 1px solid #eee;
+}
+
+#progressCAApp .message-btn-list button {
+  border: none;
+  font-size: 12px;
+  color: #fff;
+  background: #5582f4;
+  /* margin: 0 0 0 12px; */
+  height: 28px;
+  /* font-weight: bold; */
+  padding: 0 15px;
+  border-radius: 2px;
+}
+
+#progressCAApp .message-btn-list button:hover {
+  background: #779bf5;
+}
+
 .select-box{
   width: 100%;
   height: 200px;
