--- a/成本管理/成本分析与控制/成本对比分析表/当前任务成本管控/cost_resouces_report_measures_1.0/css/main.css
+++ b/成本管理/成本分析与控制/成本对比分析表/当前任务成本管控/cost_resouces_report_measures_1.0/css/main.css
@@ -4,7 +4,7 @@ html,body{
   width: 100%;
   height: 100%;
 }
-#costResoucesRMApp {
+#ctaskCostControlApp {
   /* display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -16,7 +16,7 @@ html,body{
   box-sizing: border-box;
 }
 
-#costResoucesRMApp .btn-lsit {
+#ctaskCostControlApp .btn-lsit {
   width: 100%;
   height: 50px;
   background: #fff;
@@ -29,11 +29,11 @@ html,body{
   position: relative;
 }
 
-#costResoucesRMApp .btn-lsit .btn-box-right{
+#ctaskCostControlApp .btn-lsit .btn-box-right{
   padding-right: 20px;
 }
 
-#costResoucesRMApp .btn-lsit button {
+#ctaskCostControlApp .btn-lsit button {
   border: none;
   font-size: 12px;
   color: #fff;
@@ -45,20 +45,20 @@ html,body{
   border-radius: 2px;
 }
 
-#costResoucesRMApp .btn-lsit button:hover {
+#ctaskCostControlApp .btn-lsit button:hover {
   background: #779bf5;
 }
 
-#costResoucesRMApp .el-table__body tr.current-row > td {
+#ctaskCostControlApp .el-table__body tr.current-row > td {
   background-color: #eff3fd   !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
-#costResoucesRMApp .el-table--enable-row-hover .el-table__body tr:hover > td {
+#ctaskCostControlApp .el-table--enable-row-hover .el-table__body tr:hover > td {
   background-color: #eff3fd  ;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
 }
 
-#costResoucesRMApp .check-man {
+#ctaskCostControlApp .check-man {
   width: 140%;
   height: 30px;
   display: flex;
@@ -68,12 +68,39 @@ html,body{
   margin: 0 -10px;
   text-indent: 10px;
 }
-#costResoucesRMApp .check-man{
+#ctaskCostControlApp .check-man{
   border-top: none;
   border-bottom: 1px solid #cecece;
 }
-#costResoucesRMApp .check-man:nth-last-of-type(1) {
+#ctaskCostControlApp .check-man:nth-last-of-type(1) {
   border: none;
+}
+
+.item-wrap{
+  padding: 15px 50px 20px 28px;
+  background: #fff;
+  margin-bottom: 10px;
+}
+
+.title-info-box{
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.drop-btn{
+  font-size: 18px;
+  color: #5582f4;
+  margin-right: 5px;
+}
+
+.title-text{
+  font-size: 18px;
+  color:  #5582f4;
+}
+
+.table-content{
+  padding: 10px 0 0 20px;
 }
 
 .el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
