--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
@@ -47,6 +47,10 @@ html,body{
   background: #779bf5;
 }
 
+.status-text{
+  color: #5582f4;
+}
+
 .message-box{
   width: 100%;
   height: 100%;
@@ -117,11 +121,61 @@ html,body{
   height: 28px;
   /* font-weight: bold; */
   padding: 0 15px;
+  margin-right: 20px;
   border-radius: 2px;
 }
 
 #progressCAApp .message-btn-list button:hover {
   background: #779bf5;
+}
+
+.task-report-detail-box{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, .4);
+}
+
+.report-detail-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 1000px;
+  height: 600px;
+  background: #fff;
+}
+
+.detail-title{
+  height: 50px;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
+  align-items: center;
+  border-bottom:1px solid #eee;
+  font-size: 20px;
+  font-weight: 700;
+  color: #333;
+}
+
+.el-icon-close{
+  font-size: 22px;
+  cursor: pointer;
+}
+
+.detail-table{
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding: 10px;
+}
+
+.detail-table span{
+  font-size: 18px;
 }
 
 .select-box{
@@ -235,6 +289,7 @@ html,body{
   justify-content: space-between;
   align-items: center;
   font-size: 20px;
+  cursor: pointer;
 }
 #progressCAApp .el-table__body tr.current-row > td {
   background-color: #eff3fd   !important;
