--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/当前任务管控-当前任务汇报及措施表/resources_report_measures_1.0/css/main.css
@@ -2,7 +2,7 @@ html,body{
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
 }
 #resourcesRMApp {
   /* display: flex;
@@ -10,9 +10,9 @@ html,body{
   justify-content: flex-start;
   align-items: center; */
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   background: #f2f5fe;
-  padding: 10px;
+  /* padding: 10px; */
   box-sizing: border-box;
 }
 
@@ -62,8 +62,9 @@ html,body{
   width: 140%;
   height: 30px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
+  text-indent: -10px!important;
   /* border-bottom: 1px solid #ebeef5; */
   margin: 0 -10px;
   text-indent: 10px;
