--- a/任务看板/task_kanban/css/main.css
+++ b/任务看板/task_kanban/css/main.css
@@ -19,6 +19,45 @@ body {
   box-sizing: border-box;
 }
 
+.tab-box{
+  width: 100%;
+  height: 40px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.tab-box .tab-item{
+  border: 1px solid #ddd;
+  color: #333;
+  font-size: 14px;
+  padding: 8px 10px;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+
+
+.tab-box .tab-focus{
+  background-color: #779bf5;
+  color: #fff;
+  border: 1px solid #779bf5;
+}
+
+.tab-box .tab-item:last-of-type {
+  border-left:none;
+}
+
+.content-wrap{
+  width: 100%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding-top: 10px;
+}
+
 #taskKanbanApp .top-box {
   display: flex;
   justify-content: flex-start;
@@ -128,6 +167,10 @@ body {
   border: 1px solid rgba(238, 238, 238, 1);
   border-left: none;
   box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.06);
+}
+
+#taskKanbanApp .bottom-box .task-detail-tz{
+  width: 50%;
 }
 
 .task-detail-left-toBeComplected {
