--- a/任务看板/task_kanban/css/main.css
+++ b/任务看板/task_kanban/css/main.css
@@ -19,7 +19,7 @@ body {
   box-sizing: border-box;
 }
 
-.tab-box{
+#taskKanbanApp .tab-box{
   width: 100%;
   height: 40px;
   display: flex;
@@ -27,7 +27,7 @@ body {
   align-items: center;
 }
 
-.tab-box .tab-item{
+#taskKanbanApp .tab-box .tab-item{
   border: 1px solid #ddd;
   color: #333;
   font-size: 14px;
@@ -38,17 +38,17 @@ body {
 
 
 
-.tab-box .tab-focus{
+#taskKanbanApp .tab-box .tab-focus{
   background-color: #779bf5;
   color: #fff;
   border: 1px solid #779bf5;
 }
 
-.tab-box .tab-item:last-of-type {
+#taskKanbanApp .tab-box .tab-item:last-of-type {
   border-left:none;
 }
 
-.content-wrap{
+#taskKanbanApp .content-wrap{
   width: 100%;
   flex: 1;
   display: flex;
