--- a/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
+++ b/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
@@ -8,7 +8,7 @@ html,body{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   width: 100%;
   height: 100%;
   background: #f2f5fe;
@@ -25,6 +25,7 @@ html,body{
   justify-content: space-between;
   align-items: center;
   position: relative;
+  flex-shrink: 0;
 }
 
 #costCAApp .btn-lsit .btn-box-right{
@@ -47,7 +48,7 @@ html,body{
   background: #779bf5;
 }
 
-.message-box{
+#costCAApp .message-box{
   width: 100%;
   height: 100%;
   position: absolute;
@@ -58,7 +59,7 @@ html,body{
   background: rgba(0, 0, 0, .4);
 }
 
-.message-content{
+#costCAApp .message-content{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -68,7 +69,7 @@ html,body{
   background: #fff;
 }
 
-.message-title{
+#costCAApp .message-title{
   display: flex;
   justify-content: flex-start;
   padding-left: 20px;
@@ -79,20 +80,20 @@ html,body{
   border-bottom: 1px solid #eee;
 }
 
-.message-info{
+#costCAApp .message-info{
   overflow-y: auto;
   padding: 30px 50px;
   height: 500px;
 }
 
-.message-item{
+#costCAApp .message-item{
   height: 40px;
   /* padding-left: 30px; */
   font-size: 18px;
   color: #333;
 }
 
-.message-info-empty{
+#costCAApp .message-info-empty{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,7 +101,7 @@ html,body{
   color: #333;
 }
 
-.message-btn-list{
+#costCAApp .message-btn-list{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,49 +125,70 @@ html,body{
   background: #779bf5;
 }
 
-.select-box{
-  width: 100%;
-  height: 200px;
+#costCAApp .select-box{
+  /* width: 100%;
+  height: 200px; */
+  margin: 10px;
+  margin-bottom: 0px;
 }
 
-.select-options{
+#costCAApp .select-options{
   height: 100%;
   border: 1px solid #eee;
-  border-radius: 5px;
-  margin: 10px;
+  /* border-radius: 5px;
+  margin: 10px; */
   background-color: #fff;
 }
 
-.table-content{
+#costCAApp .sel-item{
+  /* width: 100%; */
+  height: 40px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 20px;
+}
+
+#costCAApp .sel-item-title{
+  line-height: 40px;
+  font-size: 16px;
+}
+
+#costCAApp .table-content{
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
-  flex-grow: 1;
-  width: 100%;
-  height: 100%;
+  flex: 1;
+  overflow: hidden;
+  margin: 10px;
+  /* width: 100%;
+  height: 100%; */
 }
 
-.table-box{
+#costCAApp .table-box{
   border: 1px solid #eee;
   flex: 1;
   background-color: #fff;
   justify-content: stretch;
   padding:10px;
+  flex-shrink: 1;
   /* height: 100%; */
+  overflow-y: auto;
+
 }
 
-.table-left{
+#costCAApp .table-left{
   margin-right: 10px;
 }
 
-.table-right{
+#costCAApp .table-right{
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
   flex-grow: 1;
 }
 
-.detail-info-box{
+#costCAApp .detail-info-box{
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
@@ -174,22 +196,22 @@ html,body{
   margin-bottom: 20px;
 }
 
-.title-info-box{
+#costCAApp .title-info-box{
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-.drop-btn{
+#costCAApp .drop-btn{
   font-size: 24px;
   color: #5582f4;
 }
 
-.title-text{
+#costCAApp .title-text{
   font-size: 18px;
   color:  #5582f4;
 }
-.search-icon{
+#costCAApp .search-icon{
   display: flex;
   width: 100%;
   justify-content: space-between;
