--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
@@ -25,6 +25,7 @@ html,body{
   justify-content: space-between;
   align-items: center;
   position: relative;
+  flex-shrink: 0;
 }
 
 #progressCAApp .btn-lsit .btn-box-right{
@@ -47,11 +48,11 @@ html,body{
   background: #779bf5;
 }
 
-.status-text{
+#progressCAApp .status-text{
   color: #5582f4;
 }
 
-.message-box{
+#progressCAApp .message-box{
   width: 100%;
   height: 100%;
   position: absolute;
@@ -62,7 +63,7 @@ html,body{
   background: rgba(0, 0, 0, .4);
 }
 
-.message-content{
+#progressCAApp .message-content{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -72,7 +73,7 @@ html,body{
   background: #fff;
 }
 
-.message-title{
+#progressCAApp .message-title{
   display: flex;
   justify-content: flex-start;
   padding-left: 20px;
@@ -83,20 +84,20 @@ html,body{
   border-bottom: 1px solid #eee;
 }
 
-.message-info{
+#progressCAApp .message-info{
   overflow-y: auto;
   padding: 30px 50px;
   height: 500px;
 }
 
-.message-item{
+#progressCAApp .message-item{
   height: 40px;
   /* padding-left: 30px; */
   font-size: 18px;
   color: #333;
 }
 
-.message-info-empty{
+#progressCAApp .message-info-empty{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -104,7 +105,7 @@ html,body{
   color: #333;
 }
 
-.message-btn-list{
+#progressCAApp .message-btn-list{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -234,6 +235,7 @@ html,body{
   justify-content: flex-start;
   align-items: stretch;
   flex-grow: 1;
+  overflow: hidden;
   margin: 10px;
   /* margin-top: 0px; */
   /* width: 100%; */
@@ -247,6 +249,8 @@ html,body{
   justify-content: stretch;
   padding:10px;
   /* height: 100%; */
+  flex-shrink: 1;
+  overflow-y: auto;
 }
 
 #progressCAApp .table-left{
