--- a/成本管理/成本分析与控制/成本对比分析表/紧前任务情况/cost_pretask_info_1.0/css/main.css
+++ b/成本管理/成本分析与控制/成本对比分析表/紧前任务情况/cost_pretask_info_1.0/css/main.css
@@ -8,10 +8,11 @@ html,body{
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center;
+  align-items: stretch;
   width: 100%;
   height: 100%;
   background: #f2f5fe;
+  overflow: hidden;
 }
 
 #costPretaskInfoApp .btn-lsit {
@@ -25,6 +26,7 @@ html,body{
   justify-content: space-between;
   align-items: center;
   position: relative;
+  flex-shrink: 0;
 }
 
 #costPretaskInfoApp .btn-lsit .btn-box-right{
@@ -47,7 +49,7 @@ html,body{
   background: #779bf5;
 }
 
-.message-box{
+#costPretaskInfoApp .message-box{
   width: 100%;
   height: 100%;
   position: absolute;
@@ -58,7 +60,7 @@ html,body{
   background: rgba(0, 0, 0, .4);
 }
 
-.message-content{
+#costPretaskInfoApp .message-content{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -68,7 +70,7 @@ html,body{
   background: #fff;
 }
 
-.message-title{
+#costPretaskInfoApp .message-title{
   display: flex;
   justify-content: flex-start;
   padding-left: 20px;
@@ -79,20 +81,20 @@ html,body{
   border-bottom: 1px solid #eee;
 }
 
-.message-info{
+#costPretaskInfoApp .message-info{
   overflow-y: auto;
   padding: 30px 50px;
   height: 500px;
 }
 
-.message-item{
+#costPretaskInfoApp .message-item{
   height: 40px;
   /* padding-left: 30px; */
   font-size: 18px;
   color: #333;
 }
 
-.message-info-empty{
+#costPretaskInfoApp .message-info-empty{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -100,7 +102,7 @@ html,body{
   color: #333;
 }
 
-.message-btn-list{
+#costPretaskInfoApp .message-btn-list{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -124,12 +126,12 @@ html,body{
   background: #779bf5;
 }
 
-.select-box{
+#costPretaskInfoApp .select-box{
   width: 100%;
   height: 200px;
 }
 
-.select-options{
+#costPretaskInfoApp .select-options{
   height: 100%;
   border: 1px solid #eee;
   border-radius: 5px;
@@ -137,36 +139,37 @@ html,body{
   background-color: #fff;
 }
 
-.table-content{
+#costPretaskInfoApp .table-content{
   display: flex;
   justify-content: flex-start;
   align-items: stretch;
-  flex-grow: 1;
-  width: 100%;
-  height: 100%;
+  flex: 1;
+  overflow: hidden;
+  margin: 10px;
 }
 
-.table-box{
+#costPretaskInfoApp .table-box{
   border: 1px solid #eee;
   flex: 1;
   background-color: #fff;
   justify-content: stretch;
   padding:10px;
-  /* height: 100%; */
+  flex-shrink: 1;
+  overflow-y: auto;
 }
 
-.table-left{
+#costPretaskInfoApp .table-left{
   margin-right: 10px;
 }
 
-.table-right{
+#costPretaskInfoApp .table-right{
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
   flex-grow: 1;
 }
 
-.detail-info-box{
+#costPretaskInfoApp .detail-info-box{
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
@@ -174,22 +177,22 @@ html,body{
   margin-bottom: 20px;
 }
 
-.title-info-box{
+#costPretaskInfoApp .title-info-box{
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
 
-.drop-btn{
+#costPretaskInfoApp .drop-btn{
   font-size: 24px;
   color: #5582f4;
 }
 
-.title-text{
+#costPretaskInfoApp .title-text{
   font-size: 18px;
   color:  #5582f4;
 }
-.search-icon{
+#costPretaskInfoApp .search-icon{
   display: flex;
   width: 100%;
   justify-content: space-between;
