--- a/后台管理中心/数据统计/data_statistics_chart_1.0/css/main.css
+++ b/后台管理中心/数据统计/data_statistics_chart_1.0/css/main.css
@@ -28,7 +28,34 @@ html,body{
 	align-items: center;
 }
 
-.chart-container{
+.chart-wrap{
 	width: 100%;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-grow: 1;
+	/* height: 100%; */
+	margin: 0 20px;
+
+}
+
+.chart-title{
+	width: 100%;
+	height: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 24px;
+	font-weight: 700;
+	color: #2B82E4;
+}
+
+.chart-container{
+	/* flex: 1; */
+	width: 80%;
 	height: 100%;
+}
+
+.chart-container-except{
+	width: 50%;
 }
