--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/css/main.css
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/css/main.css
@@ -162,3 +162,10 @@
 #resourceAllocationApp .type-one .checek-man:nth-last-of-type(1) {
   border: none;
 }
+
+.el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
+  border-color: #cecece!important; 
+}
+.el-table--border::after, .el-table--group::after, .el-table::before{
+  background-color: #cecece!important;
+}
