--- a/质量计划设置页面自定义控件/quality_plan_1.3/css/main.css
+++ b/质量计划设置页面自定义控件/quality_plan_1.3/css/main.css
@@ -26,10 +26,14 @@ html,body{
 #qualityPlanApp {
   width: 100%;
   background: #f2f5fe;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
 }
 
 #qualityPlanApp .btn-lsit {
-  width: 100%;
+  /* width: 100%; */
   height: 50px;
   background: #fff;
   text-align: left;
@@ -39,6 +43,10 @@ html,body{
   justify-content: flex-start;
   align-items: center;
   position: relative;
+}
+
+#qualityPlanApp .table-box{
+  padding: 10px;
 }
 
 #qualityPlanApp .btn-lsit button {
@@ -146,8 +154,8 @@ html,body{
 
 
 .el-table td, .el-table th.is-leaf,.el-table--border, .el-table--group{
-  border-color: #cecece; 
+  border-color: #cecece!important; 
 }
 .el-table--border::after, .el-table--group::after, .el-table::before{
-  background-color: #cecece;
+  background-color: #cecece!important;
 }
