--- a/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
+++ b/成本管理/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
@@ -59,6 +59,7 @@ html,body{
   background: rgba(0, 0, 0, .4);
 }
 
+
 #costCAApp .message-content{
   display: flex;
   flex-direction: column;
@@ -122,6 +123,69 @@ html,body{
 }
 
 #costCAApp .message-btn-list button:hover {
+  background: #779bf5;
+}
+
+.follow-task-list-box{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 100;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, .4);
+}
+
+.follow-task-list-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  width: 80%;
+  background: #fff;
+}
+
+.follow-task-list-title{
+  display: flex;
+  height: 50px;
+  justify-content: space-between;
+  padding: 0 10px;
+  align-items: center;
+  font-size: 18px;
+  color: #333;
+  font-weight: 700;
+}
+
+.follow-task-table-box{
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+
+.follow-task-btn-box{
+  display: flex;
+  height: 60px;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.follow-task-btn-box button {
+  border: none;
+  font-size: 12px;
+  color: #fff;
+  background: #5582f4;
+  /* margin: 0 0 0 12px; */
+  height: 28px;
+  /* font-weight: bold; */
+  padding: 0 15px;
+  border-radius: 2px;
+}
+
+.follow-task-btn-box button:hover {
   background: #779bf5;
 }
 
