--- a/自定义控件权限管理/custom_control_permission_management/css/main.css
+++ b/自定义控件权限管理/custom_control_permission_management/css/main.css
@@ -70,9 +70,11 @@ html,body {
   color: #333;
   margin-right: 5px;
 }
+
 input:focus {
   outline: none;
 }
+
 .search-input{
   border: none;
   flex: 1;
@@ -96,4 +98,34 @@ input:focus {
 
 .el-tree{
   width: 100%;
+}
+
+.first-tab-content .btn-box{
+  width: 200px;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: none;
+}
+
+.first-tab-content .btn-box button {
+  border: none;
+  font-size: 12px;
+  color: #fff;
+  background: #5582f4;
+  height: 28px;
+  /* font-weight: bold; */
+  padding: 0 15px;
+  border-radius: 2px;
+  margin-bottom: 20px;
+}
+
+.first-tab-content .btn-box button:hover {
+  background: #779bf5;
+}
+
+.first-tab-content .first-tree-box .empty-box{
+  border: none;
 }
