--- a/自定义控件权限管理/custom_control_permission_management/css/main.css
+++ b/自定义控件权限管理/custom_control_permission_management/css/main.css
@@ -23,10 +23,12 @@ html,body {
   flex-direction: column;
   justify-content: flex-start;
   align-items: stretch;
+  position: relative;
 }
 
 .el-tabs__content{
   flex: 1;
+  position: static;
 }
 
 .el-tab-pane{
@@ -34,7 +36,7 @@ html,body {
   height: 100%;
 }
 
-.first-tab-content{
+.tab-content{
   width: 100%;
   height: 100%;
   display: flex;
@@ -43,7 +45,7 @@ html,body {
 }
 
 
-.first-tab-content .first-tree-box{
+.tab-content .first-tree-box{
   width: 350px;
   height: 100%;
   display: flex;
@@ -100,7 +102,7 @@ input:focus {
   width: 100%;
 }
 
-.first-tab-content .btn-box{
+.tab-content .btn-box{
   width: 200px;
   height: 100%;
   display: flex;
@@ -110,7 +112,7 @@ input:focus {
   border: none;
 }
 
-.first-tab-content .btn-box button {
+.tab-content .btn-box button {
   border: none;
   font-size: 12px;
   color: #fff;
@@ -122,10 +124,28 @@ input:focus {
   margin-bottom: 20px;
 }
 
-.first-tab-content .btn-box button:hover {
+.tab-content .btn-box button:hover {
   background: #779bf5;
 }
 
-.first-tab-content .first-tree-box .empty-box{
+.tab-content .first-tree-box .empty-box{
   border: none;
+}
+
+.field-content .field-box{
+  flex: 1;
+  border:1px solid rgb(229, 229, 229);
+}
+
+.text-btn{
+  position: absolute;
+  right: 0;
+  top: 10px;
+  cursor: pointer;
+  color: #5e80eb;
+  font-size: 14px;
+}
+
+.text-btn:hover{
+  color: #2240a0;
 }
