--- a/自定义控件权限管理/custom_control_permission_management/css/main.css
+++ b/自定义控件权限管理/custom_control_permission_management/css/main.css
@@ -133,9 +133,93 @@ input:focus {
 }
 
 .field-content .field-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
   flex: 1;
   border:1px solid rgb(229, 229, 229);
 }
+
+.field-box .field-box-header{
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: 34px;
+  border-bottom: 1px solid #ccc;
+  background-color: #f4f4f4;
+  font-size: 12px;
+}
+
+.id-field{
+  width: 40px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 20px 0 10px;
+  border-right: 1px solid #c7cbd3;
+}
+
+.field-container{
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+  padding: 7px 5px 7px 0;
+}
+
+.field-container .field-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* flex: 1; */
+  border-right: 1px solid #c7cbd3;
+}
+.field-container .name-field{
+  flex: 1;
+}
+.field-container .switch-btn-field{
+  width: 305px;
+}
+
+.field-list-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex: 1;
+  overflow-y: auto;
+}
+
+.field-list-item{
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: 34px;
+  flex-shrink: 0;
+  border-bottom: 1px solid #ccc;
+  font-size: 12px;
+}
+
+.field-list-item:hover{
+  background-color: #eff3fd;
+}
+
+.field-list-item .field-container{
+  display: flex;
+  flex: 1;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.field-list-item .field-container .field-item{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* flex: 1; */
+  border: none;
+}
+
 
 .text-btn{
   position: absolute;
@@ -148,4 +232,198 @@ input:focus {
 
 .text-btn:hover{
   color: #2240a0;
+}
+
+.field-select-model{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 888;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0,0,0,.4);
+}
+
+.field-select-container{
+  width: 980px;
+  height: 640px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: stretch;
+  background: #fff;
+  border-radius: 6px;
+  padding: 0 6px;
+}
+
+.field-select-header{
+  padding: 10px 30px;
+  border-radius: 5px 5px 0 0;
+  border-bottom: 1px solid #e9e9e9;
+  height: 50px;
+  font-size: 16px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.el-icon-close{
+  font-size: 20px;
+  color: #ccc;
+  cursor: pointer;
+}
+
+.el-icon-close:hover{
+  color: #5582f3;
+}
+
+.field-select-footer{
+  height: 54px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top: 1px solid #e9e9e9;
+}
+
+.field-select-content{
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.field-select-content .field-select-content-left{
+  width: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.field-select-content-left .content-left-table-box{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+}
+
+.content-left-table-box .table-box-header{
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  padding: 7px 10px;
+  height: 34px;
+  color: #333;
+  font-size: 12px;
+  border-top: 1px solid #e9e9e9;
+  border-bottom: 1px solid #e9e9e9;
+  background: #f4f4f4;
+  box-sizing: border-box;
+}
+
+.field-select-content-left .content-left-header{
+  height: 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.table-box-header .id-filed{
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 10px;
+}
+
+.table-box-header  .field-item{
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
+  border-right: 1px solid #ccc;
+  padding-left: 10px;
+}
+
+.content-left-table-box .table-list{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex: 1;
+  overflow-y: auto;
+  font-size: 12px;
+  color: #333;
+}
+
+.table-list .table-list-item{
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  height: 34px;
+  border-bottom: 1px solid #ccc;
+  flex-shrink: 0;
+  background: #fff;
+}
+
+.table-list .table-list-item:hover{
+  background: #eff3fd;
+}
+
+.table-list-item .id-field{
+  width: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 10px;
+  border: none;
+}
+
+.table-list-item  .field-item{
+  display: flex;
+  flex: 1;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 10px;
+}
+
+.field-select-content .field-select-content-right{
+  border-left: 1px solid #e9e9e9;
+  flex: 1;
+}
+
+.field-select-footer .btn-item{
+  border: none;
+  font-size: 12px;
+  color: #fff;
+  background: #5582f4;
+  height: 28px;
+  /* font-weight: bold; */
+  padding: 0 15px;
+  border-radius: 2px;
+}
+
+.field-select-footer .btn-item:hover{
+  background: #779bf5;
+}
+
+.field-select-footer .btn-item-cancel{
+  color: #ccc;
+  border: 1px solid #ccc;
+  background: #fff;
+  margin-right: 30px;
+}
+
+.field-select-footer .btn-item-cancel:focus{
+  outline: none;
+}
+
+.field-select-footer .btn-item-cancel:hover{
+  color: #eee;
+  background: #fff;
 }
