--- a/自定义控件权限管理/custom_control_permission_management/css/main.css
+++ b/自定义控件权限管理/custom_control_permission_management/css/main.css
@@ -151,6 +151,25 @@ input:focus {
   font-size: 12px;
 }
 
+.field-box .field-box-header-item{
+  width: 75px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 5px;
+}
+.field-box .filed-select{
+  width: 100px;
+}
+
+.field-box .condition-select{
+  width: 80px;
+}
+
+.field-box .value-input{
+  width: 200px;
+}
+
 .id-field{
   width: 40px;
   display: flex;
@@ -499,6 +518,39 @@ input:focus {
 .field-select-footer .btn-item-cancel:hover{
   color: #eee;
   background: #fff;
+}
+
+.data-rule-content .field-box .field-box-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: stretch;
+  flex-grow: 1;
+  flex-shrink: 0;
+  height: 0;
+  overflow-y: auto;
+  padding: 0 10px;
+}
+
+.field-box-content .add-data-rule-btn{
+  width: 80px;
+  height: 22px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 28px 18px 0;
+  font-size: 12px;
+  letter-spacing: 0;
+  border-radius: 2px;
+  cursor: pointer;
+  border: 1px solid #5e80eb;
+  color: #5e80eb;
+  padding:0 5px;
+  box-sizing: border-box;
+}
+.field-box-content .add-data-rule-btn .el-icon-plus{
+  font-size: 12px;
+  font-weight: 800;
 }
 
 #ccPermissionManagementApp .el-checkbox__inner{
