--- a/自定义控件权限管理/custom_control_permission_management/css/main.css
+++ b/自定义控件权限管理/custom_control_permission_management/css/main.css
@@ -553,6 +553,6 @@ input:focus {
   font-weight: 800;
 }
 
-#ccPermissionManagementApp .el-checkbox__inner{
+/* #ccPermissionManagementApp .el-checkbox__inner{
   border-radius: 100%;
-}
+} */
