--- a/自定义控件权限管理/custom_control_permission_management/css/main.css
+++ b/自定义控件权限管理/custom_control_permission_management/css/main.css
@@ -173,7 +173,7 @@ input:focus {
 .id-field{
   width: 40px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   padding: 0 20px 0 10px;
   border-right: 1px solid #c7cbd3;
@@ -208,6 +208,12 @@ input:focus {
   align-items: stretch;
   flex: 1;
   overflow-y: auto;
+}
+
+.field-list-box .id-field{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .field-list-item{
@@ -249,7 +255,7 @@ input:focus {
   font-size: 14px;
 }
 
-.text-btn:hover{
+.text-btn span:hover{
   color: #2240a0;
 }
 
