fix permission_management bug and quality_plan add permission

--- a/质量计划设置页面自定义控件/quality_plan_1.3/css/main.css
+++ b/质量计划设置页面自定义控件/quality_plan_1.3/css/main.css
@@ -59,10 +59,16 @@ html,body{
   /* font-weight: bold; */
   padding: 0 15px;
   border-radius: 2px;
+  cursor: pointer;
 }
 
 #qualityPlanApp .btn-lsit button:hover {
   background: #779bf5;
+}
+
+button[disabled]{
+  background: #ccc!important;
+  color: #666!important;
 }
 
 #qualityPlanApp .recheck-box {
