--- a/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/css/main.css
+++ b/质量计划设置页面自定义控件/quality_plan_1.4_缓存/quality_plan/css/main.css
@@ -165,3 +165,8 @@ button[disabled]{
 .el-table--border::after, .el-table--group::after, .el-table::before{
   background-color: #cecece!important;
 }
+
+
+.el-table .delegate-row {
+  background: #eee;
+}
