--- a/执行管理--质量计划--资源调配/resource_allocation_v1.0/css/main.css
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.0/css/main.css
@@ -182,3 +182,12 @@ html,body{
 .el-table--border::after, .el-table--group::after, .el-table::before{
   background-color: #cecece!important;
 }
+
+#resourceAllocationApp .el-table__body tr.current-row > td {
+  background-color: #eff3fd   !important;
+  /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
+}
+#resourceAllocationApp .el-table--enable-row-hover .el-table__body tr:hover > td {
+  background-color: #eff3fd  ;
+  /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
+}
