--- a/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
+++ b/执行管理-成本管理-成本分析及控制/成本分析与控制/成本对比分析表/成本对比分析表首页/cost_contrast_analysis_1.0/css/main.css
@@ -278,6 +278,10 @@ html,body{
   align-items: center;
   font-size: 20px;
 }
+
+#costCAApp .search-icon .el-icon-search{
+  position: static!important;
+}
 #costCAApp .el-table__body tr.current-row > td {
   background-color: #eff3fd   !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
