--- a/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
+++ b/执行管理-进度管理-进度分析及控制/进度对比分析表/进度对比分析表首页/progress_contrast_analysis_1.0/css/main.css
@@ -295,6 +295,11 @@ html,body{
   font-size: 20px;
   cursor: pointer;
 }
+
+#progressCAApp .search-icon .el-icon-search{
+  position: static;
+}
+
 .el-table__body tr.current-row > td {
   background-color: #eff3fd   !important;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
