--- a/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/css/main.css
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/css/main.css
@@ -68,6 +68,11 @@ html,body{
   background: #779bf5;
 }
 
+button[disabled]{
+  background: #ccc!important;
+  color: #666!important;
+}
+
 #resourceAllocationApp .recheck-box {
   width: 120%;
   display: flex;
@@ -190,4 +195,8 @@ html,body{
 #resourceAllocationApp .el-table--enable-row-hover .el-table__body tr:hover > td {
   background-color: #eff3fd  ;
   /* color: #f19944; */ /* 设置文字颜色，可以选择不设置 */
+}
+
+.el-table .delegate-row {
+  background: #eee;
 }
